spec/e2e/function/extra_arguments.lit
fn f { |a, b|
  println a;
  println b;
}

f(1, 2, 3, 4); # error: [line 6] Runtime error: Expected 2 arguments but got 4.
